# open-masala

./: .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  dataset-expansion-scope.md  llms.txt  server.json  smithery.yaml
advisor/: ADVISOR.md  BUILD-YOUR-HEALTH-ADVISOR.md  README.md
data/: ancestry-reference-ranges.fhir.json  ancestry-reference-ranges.v0.csv  ancestry-reference-ranges.v0.json
docs/: governance.md  provenance.md  schema.md
mcp-server/: PUBLISHING.md  README.md  pyproject.toml  server.py
mcp-server/open_masala_mcp/: __init__.py  core.py  server.py
mcp-server/open_masala_mcp/data/: ancestry-reference-ranges.v0.json
mcp-server/tests/: test_core.py
scripts/: build.py  extract.py
