[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "open-masala-mcp"
version = "0.0.1"
description = "MCP server for Open Masala — ancestry-adjusted health reference ranges (South Asian biomarker cutoffs, cited)."
readme = "README.md"
requires-python = ">=3.10"
license = "CC-BY-4.0"
authors = [{ name = "Masala Health" }]
keywords = ["mcp", "health", "south-asian", "reference-ranges", "loinc", "fhir", "clinical"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Healthcare Industry",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = ["mcp[cli]>=1.2.0"]

[project.urls]
Homepage = "https://masalahealth.co/open-masala/"
Repository = "https://github.com/masalahealth/open-masala"
Dataset = "https://huggingface.co/datasets/masalahealthco/open-masala"

[project.scripts]
open-masala-mcp = "open_masala_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["open_masala_mcp"]

[tool.hatch.build.targets.wheel.force-include]
"open_masala_mcp/data/ancestry-reference-ranges.v0.json" = "open_masala_mcp/data/ancestry-reference-ranges.v0.json"
